@@ -1317,8 +1317,7 @@
           <jdkToolchain>
             <version>${jdk.target.version}</version>
           </jdkToolchain>
-          <source>${jdk.src.version}</source>
-          <target>${jdk.target.version}</target>
+          <release>${jdk.target.version}</release>
           <parameters>true</parameters>
           <debuglevel>lines,vars,source</debuglevel>
         </configuration>
@@ -1329,8 +1328,7 @@
               <jdkToolchain>
                 <version>${jdk.target.version}</version>
               </jdkToolchain>
-              <source>${jdk.src.version}</source>
-              <target>${jdk.target.version}</target>
+              <release>${jdk.target.version}</release>
             </configuration>
           </execution>
           <execution>
@@ -1339,8 +1337,7 @@
               <jdkToolchain>
                 <version>${jdk.target.version}</version>
               </jdkToolchain>
-              <source>${jdk.src.version}</source>
-              <target>${jdk.target.version}</target>
+              <release>${jdk.target.version}</release>
               <proc>none</proc>
             </configuration>
           </execution>
@@ -1525,6 +1522,14 @@
               <detectJavaApiLink>false</detectJavaApiLink>
               <detectOfflineLinks>false</detectOfflineLinks>
               <linksource>false</linksource>
+              <sourceFileExcludes>
+                <sourceFileExclude>**/target/metamodel/**/*.java</sourceFileExclude>
+                <sourceFileExclude>**/target/generated-sources/**/*.java</sourceFileExclude>
+              </sourceFileExcludes>
+              <excludePackageNames>*.metamodel.*</excludePackageNames>
+              <additionalOptions>
+                <additionalOption>--enable-native-access=ALL-UNNAMED</additionalOption>
+              </additionalOptions>
               <additionalDependencies>
                 <additionalDependency>
                   <groupId>jakarta.xml.bind</groupId>
@@ -1538,6 +1543,7 @@
               </dependencySourceIncludes>
               <dependencySourceExcludes>
                 <dependencySourceExclude>com.hack23.cia:testfoundation</dependencySourceExclude>
+                <dependencySourceExclude>com.hack23.cia:encrypt.properties</dependencySourceExclude>
               </dependencySourceExcludes>
               <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
               <docletArtifact>
